--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,44 +1,111 @@
 body {
     font-family: arial, sans-serif;
     background: #fff;
-    margin: auto;
-}
 
-div {
-    display: block;
-}
-
-center {
-    display: block;
-    text-align: -webkit-center;
 }
 
 
 
 
+/* Navigatin bar css properties */
+
+.nav{
+    padding-right: 22px;
+    padding-left: 22px;
+    padding-top: 8px;
+    float: right;  
+}
+.nav-1 a {
+    position: relative;
+    text-decoration: none;
+    color: #5f6368;
+    font-size: 13px;
+    padding-left: 10px;   
+}
+.nav-1{
+    font-size: 13px;
+    display: inline;
+    position: relative;
+    left: -1em;
+    top: -1em;
+}
+.nav-2{
+    display: inline;
+    font-size: 13px;
+    text-decoration: none;
+}
+.nav-1 a:hover{
+    text-decoration: underline;
+    opacity: 0.55;
+}
+.menu-icon{
+display: inline-block;
+background-image: url(../media/i1_1967ca6a.png);
+background-position: -132px -38px;
+background-size: 528px 68px;
+height: 30px;
+width: 30px;
+opacity: 0.55;
+color: #000;
+text-decoration: none;
 
 
+}
+.menu-icon:hover{
+   opacity: 100;
+}
+.notification-icon{
+    background-color: #db4437;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    line-height: 20px;
+    margin: 5px;
+    padding:  3px 3.7px;
+    margin-left: 15px;
+    text-align: center;
+    box-sizing: border-box;
+    border-radius: 50%;
+    text-decoration: none;
+    position: relative;
+    top: -1em;
+}
+.notification-icon:hover{
+    background-color: #a52714;
+}
+.user-icon{
+background-image: url(https://lh3.googleusercontent.com/-N9jLMBUThyM/AAAAAAAAAAI/AAAAAAAAAAA/AKxrwcZ4DCZgVbcvZ6hfTvvgZc2dlUMP2Q/s32-c-mo/photo.jpg);
+background-size: 32x 32px;
+border-radius: 50%;
+height: 32px;
+width: 32px;
+margin-left: 10px;
+position:center;
+text-decoration: none;
+content: url(https://lh3.googleusercontent.com/-N9jLMBUThyM/AAAAAAAAAAI/AAAAAAAAAAA/AKxrwcZ4DCZgVbcvZ6hfTvvgZc2dlUMP2Q/s32-c-mo/photo.jpg);
+}
 
 
 /* Footer CSS Properties  */
 .footer-item {
-    padding-left: 27px;
+    padding-left: 23px;
     margin: 0 !important;
+    font-size: 13px;
 }
 #fbar {
     background: #f2f2f2;
     border-top: 1px solid #e4e4e4;
     line-height: 40px;
-    min-width: 980px;
-    margin-left: -27px;
+    min-width: 100%;
+    margin-left: -32px;
 }
 
 #footer-left-side {
-    margin-left: 30px;
+    margin-left: 38px;
 }
 
 #footer-right-side {
-    margin-right: 30px;
+    margin-right: 28px;
     float: right;
     white-space: nowrap;
 }
@@ -48,11 +115,16 @@ center {
     font-size: 10pt;
     height: 35px;
     position: absolute;
-    width: 100%
+    width: 100%;
+    padding-bottom: 6px;
+    right: 0;
 }
 
 #footer a {
     color: #5f6368;
     margin: 2px 10px 0;
     text-decoration: none;
+}
+#footer a:hover{
+    text-decoration: underline;
 }
